@@ -103,10 +103,12 @@ padthv1widget_lv2::padthv1widget_lv2 ( padthv1_lv2 *pPadth,
 					pConfig, pConfig->sCustomColorTheme, pal))
 				padthv1widget::setPalette(pal);
 		}
+	#if 0//--Not applicable to plugin forms...
 		if (!pConfig->sCustomStyleTheme.isEmpty()) {
-			padthv1widget::setStyle(
+			QApplication::setStyle(
 				QStyleFactory::create(pConfig->sCustomStyleTheme));
 		}
+	#endif
 	}
 
 	// Initialize (user) interface stuff...
